src/_scss/_masthead.scss
#masthead {

    @include fullWidth(100vw);
    padding: $spacer-vertical $spacer-horizontal;
    height: calc(100vh - $navbar-height);
    display: flex;
    flex-direction: column;
    justify-content: flex-end;

    position: relative;
    box-sizing: border-box;
    overflow: hidden;
    z-index: 10;

    background: $well-background;
    color: $well-text-color;

    h1,h2,h3 {
        color: $well-bold-color;
        z-index: 2;
    }
    a {
        color: $well-bold-color;
    }
    h1 + p {
        margin-bottom: 0em;
    }
    .summary {
        color: $well-bold-color;
    }

    figure {
        width: 100%;
        height: 120%;
        position: absolute;
        top: 0 - $navbar-height;
        left: 0;
        right: 0;
        z-index: -1;
        margin: 0;
        overflow: hidden;

        img,video {
            height: 100%;
            object-fit: cover;
            opacity: 0.80;
        }
        video::-webkit-media-controls-fullscreen-button {
            display: none !important;
        }
        figcaption,caption {
            position: absolute;
            right: $spacer-horizontal;
            bottom: $spacer-vertical;
            text-shadow: 0 1px 4px rgba(0,0,0,0.8);
            color: $well-bold-color;
        }
    }

    @media (orientation: portrait) {
        height: auto;
    }

    p:has(.scrollhint),p.scrollhint {
        $size: 3rem;

        width: $size;
        height: $size;
        @media (orientation: landscape) {
            position: absolute;
            left: calc(50% - math.div($size, 2));
            bottom: $spacer-vertical;
        }
        @media (orientation: portrait) {
        }
        margin: 0 auto;
        z-index: 10;
        &:hover {
            cursor: pointer;
        }
        a,svg {
            display: block;
            width: $size;
            height: $size;
        }
    }

}// end masthead

